# TAM

./: NEWS.md  README.md  STRUCTs.txt  Significant note.md  Some notes 1.2.md  TAW == TAM Windows Ver.md  cmds 2 build.txt  dpkg-query  funcs2optModules.txt  libvlc_module_.txt  links  list_0f_CATs.txt  pyproject.toml  tam.py  tam_tst.py  taw.ps1  taw.py  taw.py.raw
.github/: FUNDING.yml
.github/workflows/: pypi.yml
TST_Py_TAM/1.8-XY/: tam.py  tam_tst.py
Tiny_Automation_Manager/: tam.py
VLC_TAM/: DEPS  Makefile0  TODO.md  build.sh  dialogs_provider.hpp  extensions_manager.hpp  input_manager.hpp  main.cpp  main_interface.hpp  open.hpp  open_panels.hpp  preferences_widgets.hpp  qt.cpp  qt.hpp  qvlcframe.hpp  variables.hpp
docs/: Some notes on 1.3.md
extra/: bunchInstall_sideEffect2checkKeyCodes.py  curses.tst.py  tam(crude).py  tam(crude)1.py  tam(dbg).py  tamStable.py  tam_tst.py  tiny_automation.dbg.py
sark0y_tam/: __main__.py
